--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,6 +8,7 @@
 	"maintenanceshell-desc": "{{desc|name=MaintenanceShell|url=http://www.mediawiki.org/wiki/Extension:MaintenanceShell}}",
 	"right-maintenanceshell": "{{doc-right|maintenanceshell}}",
 	"action-maintenanceshell": "{{doc-action|maintenanceshell}}",
+	"maintenanceshell-legend": "{{Identical|Maintenance Shell}}",
 	"maintenanceshell-text": "This is a label warning the user to use with care.",
 	"maintenanceshell-return": "This is a button that says would you like to be redirected back special:maintenanceshell",
 	"maintenanceshell-error-scriptname": "This is a label for when it can not find the script.",
