Some consistency tweaks
* Remove 'description' key from extension credits
* Rephrase "action-maintenanceshell" message
* Use UTF-8

Change-Id: I1b237b814f9b1892fe6d7fff7483ab0d275bf179

--- a/i18n/de-formal.json
+++ b/i18n/de-formal.json
@@ -4,5 +4,5 @@
             "kghbln"
         ]
     },
-    "maintenanceshell-warning": "'''Achtung:''' Setzen Sie diese Skripte sorgf&auml;ltig ein. Dies wird zudem nur Systemadministratoren und fortgeschrittenen Nutzern empfohlen."
+    "maintenanceshell-warning": "'''Achtung:''' Setzen Sie diese Skripte sorgfältig ein. Dies wird zudem nur Systemadministratoren und fortgeschrittenen Nutzern empfohlen."
 }
