Use HTTPS for mediawiki.org urls
Change-Id: I071d39839b2f6ba7268684b6b625bd832eddfef1

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -6,7 +6,7 @@
 	},
 	"maintenanceshell-desc": "Interface wiki pour les scripts de maintenance",
 	"right-maintenanceshell": "Lancer les scripts de maintenance",
-	"maintenanceshell-text": "<strong>Avertissement:</strong> Utilisez ces scripts avec soin. Ils sont destinés aux développeurs uniquement.\n* [//www.mediawiki.org/wiki/Manual:Maintenance_scripts Manual:Maintenance scripts]\n* [//www.mediawiki.org/wiki/Extension:MaintenanceShell Extension:MaintenanceShell]",
+	"maintenanceshell-text": "<strong>Avertissement:</strong> Utilisez ces scripts avec soin. Ils sont destinés aux développeurs uniquement.\n* [https://www.mediawiki.org/wiki/Manual:Maintenance_scripts Manual:Maintenance scripts]\n* [https://www.mediawiki.org/wiki/Extension:MaintenanceShell Extension:MaintenanceShell]",
 	"maintenanceshell-return": "Retour à [[{{#special:maintenanceshell}}]].",
 	"maintenanceshell-error-scriptname": "Script introuvable",
 	"maintenanceshell-error-rawsubmit": "Pour des raisons de sécurité, cette page nécessite l'activation de JavaScript.",
